Enable building an executable application, including loading assets via jar (To easily enable this, load .obj files now via de.javagl.obj library).